display movie data in hero container

--- a/src/App.css
+++ b/src/App.css
@@ -36,3 +36,30 @@ body {
   justify-content: center;
   align-items: center;
 }
+
+.hero {
+  min-height: 500px;
+  background-position: top center;
+  background-size: cover;
+  display: flex;
+  align-items: flex-end;
+}
+
+.hero-content {
+  max-width: 70%;
+  padding-bottom: 60px;
+}
+
+.hero-title {
+  font-size: 72px;
+  margin: 0;
+}
+
+.button {
+  background-color: #0F1014;
+  color: white;
+  outline: none;
+  border: 1px solid white;
+  padding: 10px 15px;
+  cursor: pointer;
+}
